Dream Cars/force-app/main/default/objects/Warranty__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>For Sale</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>