Dream Cars/force-app/main/default/objects/Warranty__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>The term of the warranty in months.</description>
    <inlineHelpText>The term of the warranty in months.</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>