Dream Cars/force-app/main/default/objects/Warranty__c/fields/Warranty_Code__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Code__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Warranty Code</label>
    <type>AutoNumber</type>
</CustomField>