Dream Cars/force-app/main/default/objects/Warranty__c/validationRules/Avoid_Car_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoid_Car_Change</fullName>
    <active>true</active>
    <description>Restricts any updates to the Car field once the Warranty is issued.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Car__c)</errorConditionFormula>
    <errorDisplayField>Car__c</errorDisplayField>
    <errorMessage>Car field cannot be changed.</errorMessage>
</ValidationRule>