Dream Cars/force-app/main/default/objects/Warranty__c/validationRules/Avoid_Car_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoid_Car_Empty</fullName>
    <active>true</active>
    <description>This rule prevents saving a Warranty without an associated Car.</description>
    <errorConditionFormula>ISBLANK(Car__c)</errorConditionFormula>
    <errorDisplayField>Car__c</errorDisplayField>
    <errorMessage>Car field can&apos;t be empty</errorMessage>
</ValidationRule>